name:                playing-with-transformers
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/gbordyugov/playing-with-transformers#readme
license:             BSD3
license-file:        LICENSE
author:              Grigory Bordyugov
maintainer:          gregbg@gmail.com
copyright:           2018 Grigory Bordyugov
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable playing-with-transformers
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       transformers
